[gd_scene load_steps=3 format=3 uid="uid://bnfxc4blxjftx"]

[ext_resource type="Script" uid="uid://sx355l81iifs" path="res://scripts/ui/settings_tab_container.gd" id="1_f2smf"]
[ext_resource type="Script" uid="uid://kbcjqi3bns5o" path="res://scripts/user_settings/sound_settings.gd" id="2_i8gnx"]

[node name="SettingsTabContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f2smf")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1
current_tab = 0

[node name="Sound" type="TabBar" parent="TabContainer"]
layout_mode = 2
script = ExtResource("2_i8gnx")
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Sound"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Sound/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 64
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="TabContainer/Sound/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.5
step = 0.01
value = 1.0

[node name="MasterVolumeValue" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "70%"

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="TabContainer/Sound/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.5
step = 0.01
value = 1.5

[node name="MusicVolumeValue" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "100%"

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Effects Volume"

[node name="EffectsVolumeSlider" type="HSlider" parent="TabContainer/Sound/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.5
step = 0.01

[node name="EffectsVolumeValue" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "100%"

[node name="HBoxContainer4" type="HBoxContainer" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "UI Volume"

[node name="UIVolumeSlider" type="HSlider" parent="TabContainer/Sound/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.5
step = 0.01

[node name="UIVolumeValue" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "100%"

[node name="Controls" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Controls/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Move up"

[node name="Label2" type="Label" parent="TabContainer/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Move down"

[node name="Label3" type="Label" parent="TabContainer/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Move left"

[node name="Label4" type="Label" parent="TabContainer/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Move right"

[node name="Label5" type="Label" parent="TabContainer/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Dash"

[node name="Accessibility" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Accessibility"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Accessibility/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Accessibility/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "12345"
